<?xml version="1.0" encoding="utf-8"?>
<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/testbild"
    android:paddingTop="?android:attr/actionBarSize"
    >
<LinearLayout 
    android:layout_width="match_parent"
    android:layout_height="0dip" 
    android:orientation="vertical"
    android:paddingBottom="20dp"
    android:weightSum="1">
    

    <TextView
        android:id="@+id/kategorierTextHeader"
        android:text="@string/kategoriHead"
        style="@style/HeadLineText"/>        
      
    <!-- Information om Ale  -->   
  	<TextView
        android:id="@+id/aleHeadTextContent"
        android:text="@string/aleHead"
        style="@style/TitleText"/>
                
    <TextView
        android:id="@+id/aleBodyTextContent"
        android:text="@string/aleBody"
        style="@style/BodyText"/>
        
      <!-- Information om Lager -->

    <TextView
        android:id="@+id/lagerHeadTextContent"
        android:text="@string/lagerHead"
        style="@style/TitleText"/>

    <TextView
        android:id="@+id/lagerBodyTextContent"
        android:text="@string/lagerBody"
        style="@style/BodyText"/>
    
    <!-- Information om Pilsner -->
            <TextView
        android:id="@+id/PilsnerHeadTextContent"
        android:text="@string/pilsnerHead"
        style="@style/TitleText"/>
            
    <TextView
        android:id="@+id/pilsnerBodyTextContent"
        android:text="@string/pilsnerBody"
        style="@style/BodyText"/>
    
    <!-- Information om Bitter -->
            <TextView
        android:id="@+id/BitterHeadTextContent"
        android:text="@string/bitterHead"
        style="@style/TitleText"/>
       
    <TextView
        android:id="@+id/bitterBodyTextContent"
        android:text="@string/bitterBody"
        style="@style/BodyText"/>
    
    <!-- Information om India Pale Ale (IPA) -->
            <TextView
        android:id="@+id/ipaHeadTextContent"
        android:text="@string/ipaHead"
        style="@style/TitleText"/>
        
    <TextView
        android:id="@+id/ipaBodyTextContent"
        android:text="@string/ipaBody"
        style="@style/BodyText"/>
    
    <!-- Information om Imperial IPA -->
            <TextView
        android:id="@+id/impIpaHeadTextContent"
        android:text="@string/impIpaHead"
        style="@style/TitleText"/>
      
    <TextView
        android:id="@+id/impIpaBodyTextContent"
        android:text="@string/impIpaBody"
        style="@style/BodyText"/>
    
    <!-- Information om Stout -->
            <TextView
      	android:id="@+id/stoutHeadTextContent"
       	android:text="@string/stoutHead"
       	style="@style/TitleText"/>
      
    <TextView
        android:id="@+id/stoutBodyTextContent"
        android:text="@string/stoutBody"
        style="@style/BodyText"/>

    <!-- Information om Imperial Stout -->
            <TextView
       	android:id="@+id/impStoutHeadTextContent"
        android:text="@string/impStoutHead"
        style="@style/TitleText"/>
     
    <TextView
        android:id="@+id/impStoutBodyTextContent"
        android:text="@string/impStoutBody"
        style="@style/BodyText"/>

    <!-- Information om Porter -->
            <TextView
       	android:id="@+id/porterHeadTextContent"
        android:text="@string/porterHead"
        style="@style/TitleText"/>
       
    <TextView
        android:id="@+id/porterBodyTextContent"
        android:text="@string/porterBody"
        style="@style/BodyText"/>

    <!-- Information om Veteöl -->
            <TextView
        android:id="@+id/veteHeadTextContent"
        android:text="@string/veteHead"
        style="@style/TitleText"/>

    <TextView
        android:id="@+id/veteBodyTextContent"
        android:text="@string/veteBody"
        style="@style/BodyText"/>
    
    <!-- Information om Trappist/Abbey -->
            <TextView
        android:id="@+id/trappistHeadTextContent"
        android:text="@string/trappistHead"
        style="@style/TitleText"/>

    <TextView
        android:id="@+id/trappistBodyTextContent"
        android:text="@string/trappistBody"
        style="@style/BodyText"/>
    
    <!-- Information om Lambik -->
    
           <TextView
        android:id="@+id/lambikHeadTextContent"
        android:text="@string/lambikHead"
        style="@style/TitleText"/>
    <TextView
        android:id="@+id/lambikBodyTextContent"
        android:text="@string/lambikBody"
        style="@style/BodyText"/>
    
    <!-- Information om Barley Wine -->
    
         <TextView
        android:id="@+id/barleyHeadTextContent"
        android:text="@string/barleyHead"
        style="@style/TitleText"/>
    <TextView
        android:id="@+id/barleyBodyTextContent"
        android:text="@string/barleyBody"
        style="@style/BodyText"/>
    
    <!-- Information om Saison -->
    
   	<TextView
        android:id="@+id/saisonHeadTextContent"
        android:text="@string/saisonHead"
        style="@style/TitleText"/>
       
    <TextView
        android:id="@+id/saisonBodyTextContent"
        android:text="@string/saisonBody"
        style="@style/BodyText"/>
    
    <!-- Information om Suröl -->
   
   	<TextView
        android:id="@+id/surHeadTextContent"
        android:text="@string/surHead"
        style="@style/TitleText"/>
    <TextView
        android:id="@+id/surBodyTextContent"
        android:text="@string/surBody"
        style="@style/BodyText"/>
    
    <!-- Information om Mjöd -->
    
   	<TextView
        android:id="@+id/mjodHeadTextContent"
        android:text="@string/mjodHead"
        style="@style/TitleText"/>
    <TextView
        android:id="@+id/mjodBodyTextContent"
        android:text="@string/mjodBody"
        style="@style/BodyText"/>
    
    <!-- Information om Specialöl -->
    
    <TextView
        android:id="@+id/specHeadTextContent"
        android:text="@string/specHead"
        style="@style/TitleText"/>
    <TextView
        android:id="@+id/specBodyTextContent"
        android:text="@string/specBody"
        style="@style/BodyText"/>
   
	</LinearLayout>
</ScrollView>