<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/svAboutCat"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp">

    <LinearLayout
       	android:id="@+id/llAboutCat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/kategoriTextContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            style="@style/HeadLineText"
            android:text="@string/kategoriHead" />

        <!-- Information om Ale -->

        <TextView
            android:id="@+id/aleHeadTextContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            style="@style/TitleText"
            android:text="@string/aleHead" />

        <TextView
            android:id="@+id/aleBodyTextContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            style="@style/BodyText"
            android:text="@string/aleBody" />

        <!-- Information om Lager -->

        <TextView
            android:id="@+id/lagerHeadTextContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            style="@style/TitleText"
            android:text="@string/lagerHead" />

        <TextView
            android:id="@+id/lagerBodyTextContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            style="@style/BodyText"
            android:text="@string/lagerBody" />

        <!-- Information om Pilsner -->

        <TextView
            android:id="@+id/PilsnerHeadTextContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            style="@style/TitleText"
            android:text="@string/pilsnerHead" />

        <TextView
            android:id="@+id/pilsnerBodyTextContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            style="@style/BodyText"
            android:text="@string/pilsnerBody" />

        <!-- Information om Bitter -->

        <TextView
            android:id="@+id/BitterHeadTextContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            style="@style/TitleText"
            android:text="@string/bitterHead" />

        <TextView
            android:id="@+id/bitterBodyTextContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            style="@style/BodyText"
            android:text="@string/bitterBody" />

        <!-- Information om India Pale Ale (IPA) -->

        <TextView
            android:id="@+id/ipaHeadTextContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            style="@style/TitleText"
            android:text="@string/ipaHead" />

        <TextView
            android:id="@+id/ipaBodyTextContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            style="@style/BodyText"
            android:text="@string/ipaBody" />

        <!-- Information om Imperial IPA -->

        <TextView
            android:id="@+id/impIpaHeadTextContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            style="@style/TitleText"
            android:text="@string/impIpaHead" />

        <TextView
            android:id="@+id/impIpaBodyTextContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            style="@style/BodyText"
            android:text="@string/impIpaBody" />

        <!-- Information om Stout -->

        <TextView
            android:id="@+id/stoutHeadTextContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            style="@style/TitleText"
            android:text="@string/stoutHead" />

        <TextView
            android:id="@+id/stoutBodyTextContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            style="@style/BodyText"
            android:text="@string/stoutBody" />

        <!-- Information om Imperial Stout -->

        <TextView
            android:id="@+id/impStoutHeadTextContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            style="@style/TitleText"
            android:text="@string/impStoutHead" />

        <TextView
            android:id="@+id/impStoutBodyTextContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            style="@style/BodyText"
            android:text="@string/impStoutBody" />

        <!-- Information om Porter -->

        <TextView
            android:id="@+id/porterHeadTextContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            style="@style/TitleText"
            android:text="@string/porterHead" />

        <TextView
            android:id="@+id/porterBodyTextContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            style="@style/BodyText"
            android:text="@string/porterBody" />

        <!-- Information om Veteöl -->

        <TextView
            android:id="@+id/veteHeadTextContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            style="@style/TitleText"
            android:text="@string/veteHead" />

        <TextView
            android:id="@+id/veteBodyTextContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            style="@style/BodyText"
            android:text="@string/veteBody" />

        <!-- Information om Trappist/Abbey -->

        <TextView
            android:id="@+id/trappistHeadTextContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            style="@style/TitleText"
            android:text="@string/trappistHead" />

        <TextView
            android:id="@+id/trappistBodyTextContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            style="@style/BodyText"
            android:text="@string/trappistBody" />

        <!-- Information om Lambik -->

        <TextView
            android:id="@+id/lambikHeadTextContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            style="@style/TitleText"
            android:text="@string/lambikHead" />

        <TextView
            android:id="@+id/lambikBodyTextContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            style="@style/BodyText"
            android:text="@string/lambikBody" />

        <!-- Information om Barley Wine -->

        <TextView
            android:id="@+id/barleyHeadTextContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            style="@style/TitleText"
            android:text="@string/barleyHead" />

        <TextView
            android:id="@+id/barleyBodyTextContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            style="@style/BodyText"
            android:text="@string/barleyBody" />

        <!-- Information om Saison -->

        <TextView
            android:id="@+id/saisonHeadTextContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            style="@style/TitleText"
            android:text="@string/saisonHead" />

        <TextView
            android:id="@+id/saisonBodyTextContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            style="@style/BodyText"
            android:text="@string/saisonBody" />

        <!-- Information om Suröl -->

        <TextView
            android:id="@+id/surHeadTextContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            style="@style/TitleText"
            android:text="@string/surHead" />

        <TextView
            android:id="@+id/surBodyTextContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            style="@style/BodyText"
            android:text="@string/surBody" />

        <!-- Information om Mjöd -->

        <TextView
            android:id="@+id/mjodHeadTextContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            style="@style/TitleText"
            android:text="@string/mjodHead" />

        <TextView
            android:id="@+id/mjodBodyTextContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            style="@style/BodyText"
            android:text="@string/mjodBody" />

        <!-- Information om Specialöl -->

        <TextView
            android:id="@+id/specHeadTextContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            style="@style/TitleText"
            android:text="@string/specHead" />

        <TextView
            android:id="@+id/specBodyTextContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            style="@style/BodyText"
            android:text="@string/specBody" />
    </LinearLayout>

</ScrollView>