<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" 
    android:gravity="center_horizontal"
    android:layout_marginTop="?android:attr/actionBarSize">

    <ImageView
        android:id="@+id/listImageURL"
        android:layout_width="100dp"
        android:layout_height="100dip"
        android:contentDescription="@string/listImage"
        android:background="@drawable/kistan" />

		<TextView
		    android:id="@+id/receiptNameKistan"
		    style="@style/ListText"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/info_kistan_namn" />

		<TextView
		    android:id="@+id/receiptAddressKistan"
		    style="@style/ListText"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/info_kistan_adress" />

		<TextView
		    android:id="@+id/receiptKlubbmasteriKistan"
		    style="@style/ListText"
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:text="@string/info_kistan_klubbmasteri" />
		
		<TextView
		    android:id="@+id/receiptKvittoKistan"
		    style="@style/TitleText"
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:paddingTop="10dp"
		    android:text="@string/info_kistan_kvitto" />

    <TextView
        android:id="@+id/receiptDatumKistan"
        style="@style/ListText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/info_kista_datum" />

    <!-- Lista artiklar -->
	
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal">
			
	    <TextView
	        android:id="@+id/receiptArtikelKistan"
	        style="@style/ListText"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:paddingLeft="20dp"
	        android:paddingTop="5dp"
	        android:text="@string/info_kista_artikel" />
		    
		   <TextView
	        android:id="@+id/receiptPrisKistan"
		    android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:paddingRight="30dp"
			android:paddingTop="5dp"	        
	        style="@style/ListText"
	        android:gravity="right"
            android:text="@string/info_kista_pris"/>    
	 </LinearLayout>

	<TextView
	        android:id="@+id/receiptStarsKistan"
		    android:layout_width="wrap_content"
			android:layout_height="wrap_content"        
	        style="@style/ListText"
            android:text="**************************************"/>
	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal">
		   
		 <ListView
		     android:id="@+id/lvReceiptListViewName"
		     android:layout_width="wrap_content"
		     android:layout_height="160dp" />
		
		 <ListView
		     android:id="@+id/lvReceiptListViewPrice"
		     android:layout_width="wrap_content"
		     android:layout_height="140dp"
		     android:gravity="right" 
		     android:paddingRight="30dp"/>
			
 </LinearLayout>
 <TextView
	        android:id="@+id/receiptStarsKistan2"
		    android:layout_width="wrap_content"
			android:layout_height="wrap_content"        
	        style="@style/ListText"
            android:text="**************************************"/>
 
 <LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal">
		   
		    <TextView
		        android:id="@+id/receiptAttBetalaKistan"
		        style="@style/ListText"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:paddingLeft="20dp"
		        android:paddingTop="20dp"
		        android:text="@string/info_kista_attbetala" />
		    
		   <TextView
		       android:id="@+id/receiptTotPrisKistan"
		       style="@style/ListText"
		       android:layout_width="match_parent"
		       android:layout_height="wrap_content"
		       android:gravity="right"
		       android:paddingRight="30dp"
		       android:paddingTop="20dp"
		       android:text="@string/info_kista_pris_tot" />
    
	 </LinearLayout> 

	<Button
	    android:layout_width="130dp"
	    android:layout_height="fill_parent"
	    android:text="Accept" />

</LinearLayout>
